--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
@@ -644,7 +644,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <!--Project List View Controller-->
         <scene sceneID="OGi-Gq-18n">
             <objects>
-                <viewController id="ksN-WO-9sP" customClass="ProjectListViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProjectListViewController" id="ksN-WO-9sP" customClass="ProjectListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T8N-QQ-m91">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1076,7 +1076,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="TaskListViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TaskListViewController.h"/>
             <relationships>
-                <relationship kind="action" name="onClick_ListButton:"/>
                 <relationship kind="outlet" name="blushedCheeksImage" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="customStepTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
@@ -1099,7 +1098,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="69E-28-B73"/>
         <segue reference="nGZ-hn-d5a"/>
+        <segue reference="69E-28-B73"/>
     </inferredMetricsTieBreakers>
 </document>
